# croxy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  config.toml.example  lefthook.yml  release-please-config.json
.github/workflows/: ci.yml  omen.yml  release.yml
docs/: configuration.md  router.md
docs/plans/: 2026-02-16-auto-router-design.md  2026-02-16-auto-router-plan.md
src/: attach.rs  auto_router.rs  cli_config.rs  config.rs  lib.rs  main.rs  metrics.rs  metrics_log.rs  proxy.rs  router.rs
src/tui/: mod.rs
src/tui/views/: backends.rs  errors.rs  mod.rs  models.rs  overview.rs  providers.rs
tests/: proxy_integration.rs
