[package]
name = "croxy"
version = "1.1.0"
edition = "2024"
authors = ["Panbanda"]
license = "MIT"
description = "Observability proxy for the Anthropic API with provider routing"
repository = "https://github.com/panbanda/croxy"
keywords = ["proxy", "anthropic", "llm", "model-routing", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
axum = "0.8"
bytes = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
http-body-util = "0.1"
futures = "0.3"
dirs = "6"
clap = { version = "4", features = ["derive"] }
toml_edit = "0.22"
nix = { version = "0.29", features = ["signal", "process"] }
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4.43", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
